syntax = "proto3";

option go_package = "github.com/cligpt/shdrive/drive";

package drive;

service UpProto {
  rpc SendQuery (QueryRequest) returns (QueryReply) {}
}

message QueryRequest {
  string name = 1;
  string arch = 2;
  string os = 3;
}

message QueryReply {
  string version = 1;
  string url = 2;
  string user = 3;
  string pass = 4;
}
